--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 <body>
     <h1>Welcome!</h1>
     <p>
-        This is a very very simple web UI to interact with the deployed smart contract. In case something doesn't work, try refreshing the page or check the README.md! This app has a few limitations, check them before usage! All numbers in the config file are multiplied by 10**18. Contract information below:
+        This is a very very simple web UI to interact with the deployed smart contract. In case something doesn't work, try refreshing the page or check the README.md! 
+        <br>
+        If you open console, you can see the 10 default ganache addresses -- they can be used for testing. Console also shows errors thay may occur.
+        <br>
+        This app has a few limitations, check them before usage! All numbers in the config file are multiplied by 10**18. Contract information below:
     </p>
     <div>
         <p> Your role is: <b><span id="userRoles">None</span></b> <br>
