--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
         <br>
         If you open console, you can see the 10 default ganache addresses -- they can be used for testing. Console also shows errors thay may occur.
         <br>
+        TMAX can be one-time overriden by using the Mint form which makes a proposal for one-time increase if over the limit.
+        <br>
         This app has a few limitations, check them before usage! All numbers in the config file are multiplied by 10**18. Contract information below:
     </p>
     <div>
         <p> Your role is: <b><span id="userRoles">None</span></b> <br>
-            Your balance is: <b><span id="userFunds">-1</span></b> IERC! Very rich!<br>
-            You can send <b><span id="userTransferLimit"></span></b> tokens more today until you reach TRANSFERLIMIT! Already sent <b><span id="userSentToday"></span></b> today!
+            Balance: <b><span id="userFunds">-1</span></b> tokens<br>
+            Can send today until TRANSFERLIMIT: <b><span id="userTransferLimit"></span></b> tokens <br>
+            Sent today: <b><span id="userSentToday"></span></b> tokens
         </p>
         <p id="mintLimit">
         </p>
